@@ -271,6 +271,31 @@ CCVS_CALL_GNULIB_MACROS_ONCE()
 
 
 
+# Avoid using GCC function attributes when they are not available.
+AH_VERBATIM([__attribute__],
+[#ifndef __attribute__
+  /* Function attributes are available in gcc versions 2.5 and later.  */
+# if __GNUC__ < 2 || (__GNUC__ == 2 && __GNUC_MINOR__ < 5) || __STRICT_ANSI__
+#  define __attribute__(Spec) /* empty */
+# endif
+# if __GNUC__ == 2 && __GNUC_MINOR__ < 96
+#   define __pure__	/* empty */
+# endif
+# if __GNUC__ < 3
+#   define __malloc__	/* empty */
+# endif
+  /* The __-protected variants of `format' and `printf' attributes
+     are accepted by gcc versions 2.6.4 (effectively 2.7) and later.  */
+# if __GNUC__ < 2 || (__GNUC__ == 2 && __GNUC_MINOR__ < 7)
+#   define __const__	const
+#   define __format__	format
+#   define __noreturn__	noreturn
+#   define __printf__	printf
+# endif
+#endif /* __attribute__ */])
+
+
+
 # Check for function existance.
 AC_CHECK_FUNCS(\
 	fchdir \
